Fix gbg link, map invisible cards and no logo chapters

--- a/app/assets/scss/styles.scss
+++ b/app/assets/scss/styles.scss
@@ -156,10 +156,15 @@ main {
   max-height: 25px;
 }
 
+.chapter-card {
+  height: 100px;
+}
+
 .c_event-description li {
   list-style-type: disc !important;
   margin-left: 20px;
 }
+
 
 
 .margin-top {
